fixing social media

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <li><a href="https://www.instagram.com/iamraj007hacker/" target="_blank">
                     <img src="./images/instagram.png" alt="Instagram">
                 </a></li>
-            <li><a href="https://twitter.com/sarafraj01999">
-                    <img src="./images/twitter.png" alt="Twitter" target="_blank">
+            <li><a href="https://twitter.com/sarafraj01999" target="_blank">
+                    <img src="./images/twitter.png" alt="Twitter">
                 </a></li>
             <li><a href="https://www.linkedin.com/in/sarafraj-mallick-a7a117223/" target="_blank">
                     <img src="./images/linkedin.png" alt="Linkdein">
