--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <section>
-        <article class="three-col">
+        <article class="three-col left-col">
             <h3>How</h3>
             <img src="./images/pic1.PNG" alt="Pic-1">
             <p>Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's
